--- a/my-aktion/pom.xml
+++ b/my-aktion/pom.xml
@@ -142,6 +142,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>org.jboss.spec.javax.servlet</groupId>
+			<artifactId>jboss-servlet-api_3.0_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
+
+		<dependency>
 			<groupId>com.sun.faces</groupId>
 			<artifactId>jsf-api</artifactId>
 			<version>2.2.0-m08</version>
