--- a/my-aktion/pom.xml
+++ b/my-aktion/pom.xml
@@ -24,6 +24,7 @@
     </dependencies>
 
     <build>
+        <finalName>${project.artifactId}</finalName>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
