Wildfly-Plugin fuer das Deployment hinzugefuegt

--- a/my-aktion/pom.xml
+++ b/my-aktion/pom.xml
@@ -71,6 +71,11 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.0.0.Beta1</version>
+            </plugin>
         </plugins>
     </build>
 
