--- a/my-aktion/pom.xml
+++ b/my-aktion/pom.xml
@@ -21,6 +21,11 @@
             <version>7.0</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>org.primefaces</groupId>
+            <artifactId>primefaces</artifactId>
+            <version>4.0</version>
+        </dependency>
     </dependencies>
 
     <build>
