--- a/my-aktion/src/main/webapp/WEB-INF/web.xml
+++ b/my-aktion/src/main/webapp/WEB-INF/web.xml
@@ -15,6 +15,10 @@
             <web-resource-name>organizer</web-resource-name>
             <url-pattern>/organizer/*</url-pattern>
         </web-resource-collection>
+        <web-resource-collection>
+            <web-resource-name>organizer access via REST</web-resource-name>
+            <url-pattern>/rest/organizer/*</url-pattern>
+        </web-resource-collection>
         <auth-constraint>
             <role-name>Organizer</role-name>
         </auth-constraint>
@@ -25,4 +29,8 @@
     <security-role>
         <role-name>Organizer</role-name>
     </security-role>
+    <servlet-mapping>
+        <servlet-name>javax.ws.rs.core.Application</servlet-name>
+        <url-pattern>/rest/*</url-pattern>
+    </servlet-mapping>
 </web-app>
